src/app/index/index.component.scss
/* Main View Styles */
#index { color: #fff; }

/* Header Banner */
#header__main {
  height: 55px;
  padding: 10px 0;
  background-color: #0c1b1e;
  text-align: left;
  border-bottom: 2px solid #19474c;
  position: relative;
  z-index: 20;

  .account {
    position: absolute;
    top: 25px;
    left: -30px;
    width: 100px;
    border: 2px solid #19474c;
    border-radius: 50px;
    text-align: center;
    z-index: 2;
    background-color: #0c1b1e;
    height: 60px;
    padding: 10px 0 0 20px;

    a { cursor: pointer; }
    .logo { height: 35px; }
  }

  .title {
    height: 20px;
    margin: 8px 0 0 85px;
  }

  .settings {
    position: absolute;
    top: 25px;
    right: -30px;
    width: 100px;
    border: 2px solid #19474c;
    border-radius: 50px;
    text-align: center;
    z-index: 2;
    background-color: #0c1b1e;
    height: 60px;
    padding: 10px 20px 0 0;

    a { cursor: pointer; }
    .gear { width: 35px; }
  }
}

#no-proxy-screen {
  padding: 20px 20px 0;
  text-align: center;
  color: #61B8C1;

  .title {
    margin: 20px 0;
    font-size: 16px;
    color: #92FFFD;
  }

  .icon {
    position: relative;
    img { position: absolute; top: 30px; left: 109px; }
  }

  .protection-image {
    width: 200px;
    margin: 0 auto 40px;
    img { width: 100%; }
  }

  .warning {
    width: 250px;
    margin: auto;
    font-size: 16px;
    padding-bottom: 20px;
  }

  .instructions {
    width: 250px;
    margin: auto;
    font-size: 16px;
    padding-bottom: 20px;

    .name { color: #92FFFD; text-decoration: underline; }
    a { font-size: 16px; color: #92FFFD; }
  }
}
/* ... */

